--- a/sites/configurations/goodmoves/templates/errors/500.hbs
+++ b/sites/configurations/goodmoves/templates/errors/500.hbs
@@ -1,32 +1,33 @@
-<div class="container-fluid container-content">
-  <div class="mdc-layout-grid">
-    <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone content page-content">
-        <h2>Something went terribly wrong</h2>
-        <p>
-          Looks like either:
-        </p>
-        <ul>
-          <li>the server did not understand what you were trying to do and panicked,</li>
-          <li>the devs did something stupid, or</li>
-          <li>a combination of the two</li>
-        </ul>
-        <p>
-          What ever the cause of this issue, the devs have been informed and will
-          be working to fix whatever can be fixed
-        </p>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-        <img src="/assets/images/404.png" class="responsive">
+<div class="page">
+  <div class="container-fluid container-content">
+    <div class="mdc-layout-grid">
+      <div class="mdc-layout-grid__inner">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone content page-content">
+          <h2>Error 5xx: Something went terribly wrong</h2>
+          <p>
+            It looks like either:
+          </p>
+          <ul>
+            <li>the server did not understand what you were trying to access and panicked,</li>
+            <li>the developers overlooked something obvious, or</li>
+            <li>a combination of the two</li>
+          </ul>
+          <p>
+            Whatever the cause, the developers have been informed and will be working on a fix.
+          </p>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+          <img src="/assets/images/404.png" class="responsive">
+        </div>
       </div>
     </div>
+    <script>
+    gtag('event', '500', {
+      event_category: '{{name}}',
+      event_label: '{{request.params.uri.pathname}}'
+    });
+    </script>
   </div>
-  <script>
-  gtag('event', '500', {
-    event_category: '{{name}}',
-    event_label: '{{request.params.uri.pathname}}'
-  });
-  </script>
 </div>
 
 <!--
