--- a/sites/configurations/goodmoves/partials/browse.hbs
+++ b/sites/configurations/goodmoves/partials/browse.hbs
@@ -44,7 +44,7 @@
         Working patterns
       </div>
       <ul class="mdc-list">
-        {{#each @root.data.supplimentaryResponses.types.aggregations.working_patterns_slugs.buckets ~}}
+        {{#each @root.data.supplimentaryResponses.types.aggregations.working_patterns.buckets ~}}
           {{#if key ~}}
             <a class="mdc-list-item" href="/search?working_patterns%5B%5D={{urlencode (slugify (replace key "/" "-"))}}" role="menuitem" onclick="gtag('event', 'navigation', { event_category: '{{default ../eventContext "category-browser"}}', event_label: 'Working pattern: {{slugify (replace key "/" "-")}}' })">
               <span class="mdc-list-item__text">
