--- a/sites/configurations/getinvolved/templates/opportunities/home.hbs
+++ b/sites/configurations/getinvolved/templates/opportunities/home.hbs
@@ -58,7 +58,7 @@
                         },
                         "display": "label",
                         "items": [
-                          {{#each @root.data.supplimentaryResponses.types.aggregations.client_group.buckets ~}}
+                          {{#each @root.data.opportunitySupplimentary.types.aggregations.client_group.buckets ~}}
                           {
                             "label": {{{stringify key}}},
                             "value": {{{stringify (slugify key)}}}
@@ -73,7 +73,7 @@
                         },
                         "display": "label",
                         "items": [
-                          {{#each @root.data.supplimentaryResponses.types.aggregations.work_type.buckets ~}}
+                          {{#each @root.data.opportunitySupplimentary.types.aggregations.work_type.buckets ~}}
                           {
                             "label": {{{stringify key}}},
                             "value": {{{stringify (slugify key)}}}
