--- a/sites/configurations/getinvolved/partials/opportunity-search-form.hbs
+++ b/sites/configurations/getinvolved/partials/opportunity-search-form.hbs
@@ -94,10 +94,10 @@
       </h3>
       <div class="mdc-drawer--occasional-ie11" id="{{../instance_id}}-{{this}}-collapse"{{#unless (getProperty @root.request.params.query this)}} style="display: none;"{{/unless}}>
         {{#compare this "===" "regions" ~}}
-          {{#if (any @root.data.supplimentaryResponses.types.aggregations.countries.buckets) ~}}
-            {{#each @root.data.supplimentaryResponses.types.aggregations.countries.buckets ~}}
+          {{#if (any @root.data.opportunitySupplimentary.types.aggregations.countries.buckets) ~}}
+            {{#each @root.data.opportunitySupplimentary.types.aggregations.countries.buckets ~}}
               {{#if key ~}}
-                {{#compare (length @root.data.supplimentaryResponses.types.aggregations.countries.buckets) ">=" 1 ~}}
+                {{#compare (length @root.data.opportunitySupplimentary.types.aggregations.countries.buckets) ">=" 1 ~}}
                   <h3 class="mdc-typography--headline7">{{{key}}}</h3>
                 {{/compare ~}}
               {{/if ~}}
@@ -107,22 +107,22 @@
                 {{/if ~}}
               {{/each ~}}
             {{/each ~}}
-            {{#ifAny (length @root.data.supplimentaryResponses.types.aggregations.home_based.buckets) (length @root.data.supplimentaryResponses.types.aggregations.various_locations.buckets) ~}}
-              {{#compare (length @root.data.supplimentaryResponses.types.aggregations.countries.buckets) ">=" 1 ~}}
+            {{#ifAny (length @root.data.opportunitySupplimentary.types.aggregations.home_based.buckets) (length @root.data.opportunitySupplimentary.types.aggregations.various_locations.buckets) ~}}
+              {{#compare (length @root.data.opportunitySupplimentary.types.aggregations.countries.buckets) ">=" 1 ~}}
                 <h3 class="mdc-typography--headline7">Other</h3>
               {{/compare ~}}
-              {{#compare (length @root.data.supplimentaryResponses.types.aggregations.home_based.buckets) ">=" 1 ~}}
+              {{#compare (length @root.data.opportunitySupplimentary.types.aggregations.home_based.buckets) ">=" 1 ~}}
                 {{> term_checkbox slug="true" field="home_based" selected=@root.request.params.query.home_based instance_id=../instance_id value="Home-based"}}
               {{/compare ~}}
-              {{#compare (length @root.data.supplimentaryResponses.types.aggregations.various_locations.buckets) ">=" 1 ~}}
+              {{#compare (length @root.data.opportunitySupplimentary.types.aggregations.various_locations.buckets) ">=" 1 ~}}
                 {{> term_checkbox slug="true" field="various_locations" selected=@root.request.params.query.various_locations instance_id=../instance_id value="Various locations"}}
               {{/compare ~}}
             {{/ifAny ~}}
           {{/if ~}}
         {{else}}
-          {{#each (getProperty @root.data.supplimentaryResponses.types.aggregations (concat this "_slugs.buckets")) ~}}
+          {{#each (getProperty @root.data.opportunitySupplimentary.types.aggregations (concat this "_slugs.buckets")) ~}}
             {{#if key ~}}
-              {{> term_checkbox slug=key field=../this selected=(getProperty @root.request.params.query ../this) instance_id=../../instance_id value=(lookup (getProperty @root.data.supplimentaryResponses.types.aggregations (concat ../this ".buckets")) @index)}}
+              {{> term_checkbox slug=key field=../this selected=(getProperty @root.request.params.query ../this) instance_id=../../instance_id value=(lookup (getProperty @root.data.opportunitySupplimentary.types.aggregations (concat ../this ".buckets")) @index)}}
             {{/if ~}}
           {{/each ~}}
         {{/compare ~}}
