--- a/sites/configurations/getinvolved/partials/organisation-search-form.hbs
+++ b/sites/configurations/getinvolved/partials/organisation-search-form.hbs
@@ -28,7 +28,7 @@
     {{/components_tab_bar}}
   </div>
 
-  <form action="/{{#compare @root.request.url.pathname "/map"}}map{{else}}search{{/compare}}" method="GET" class="search-form" novalidate>
+  <form action="/{{#compare @root.request.url.pathname "/map"}}organisations/map{{else}}organisations/search{{/compare}}" method="GET" class="search-form" novalidate>
     <input type="hidden" name="sort" value="{{@root.request.params.query.sort}}" id="{{instance_id}}-sort">
     <div class="h-padding">
       <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
@@ -85,7 +85,7 @@
     <input type="hidden" name="lat" value="{{@root.request.params.query.lat}}">
     <input type="hidden" name="lng" value="{{@root.request.params.query.lng}}">
 
-    {{#each (split "regions,activities" ",") ~}}
+    {{#each (split "regions,organisation_activities" ",") ~}}
       <h3 class="mdc-drawer__content-heading cursor-pointer noselect mdc-drawer--occasional-ie11" data-collapse-target="#{{../instance_id}}-{{this}}-collapse" role="button" aria-pressed="false" aria-label="Show {{getProperty @root.context.metaData.termTypeLabels (concat this ".plural")}}" tabindex="0">
         {{getProperty @root.context.metaData.termTypeLabels (concat this ".plural")}}
         <span class="mdc-icon-toggle pull-right">
@@ -94,10 +94,10 @@
       </h3>
       <div class="mdc-drawer--occasional-ie11" id="{{../instance_id}}-{{this}}-collapse"{{#unless (getProperty @root.request.params.query this)}} style="display: none;"{{/unless}}>
         {{#compare this "===" "regions" ~}}
-          {{#if (any @root.data.supplimentaryResponses.types.aggregations.countries.buckets) ~}}
-            {{#each @root.data.supplimentaryResponses.types.aggregations.countries.buckets ~}}
+          {{#if (any @root.data.organisationSupplimentary.types.aggregations.countries.buckets) ~}}
+            {{#each @root.data.organisationSupplimentary.types.aggregations.countries.buckets ~}}
               {{#if key ~}}
-                {{#compare (length @root.data.supplimentaryResponses.types.aggregations.countries.buckets) ">=" 1 ~}}
+                {{#compare (length @root.data.organisationSupplimentary.types.aggregations.countries.buckets) ">=" 1 ~}}
                   <h3 class="mdc-typography--headline7">{{{key}}}</h3>
                 {{/compare ~}}
               {{/if ~}}
@@ -107,22 +107,22 @@
                 {{/if ~}}
               {{/each ~}}
             {{/each ~}}
-            {{#ifAny (length @root.data.supplimentaryResponses.types.aggregations.home_based.buckets) (length @root.data.supplimentaryResponses.types.aggregations.various_locations.buckets) ~}}
-              {{#compare (length @root.data.supplimentaryResponses.types.aggregations.countries.buckets) ">=" 1 ~}}
+            {{#ifAny (length @root.data.organisationSupplimentary.types.aggregations.home_based.buckets) (length @root.data.organisationSupplimentary.types.aggregations.various_locations.buckets) ~}}
+              {{#compare (length @root.data.organisationSupplimentary.types.aggregations.countries.buckets) ">=" 1 ~}}
                 <h3 class="mdc-typography--headline7">Other</h3>
               {{/compare ~}}
-              {{#compare (length @root.data.supplimentaryResponses.types.aggregations.home_based.buckets) ">=" 1 ~}}
+              {{#compare (length @root.data.organisationSupplimentary.types.aggregations.home_based.buckets) ">=" 1 ~}}
                 {{> term_checkbox slug="true" field="home_based" selected=@root.request.params.query.home_based instance_id=../instance_id value="Home-based"}}
               {{/compare ~}}
-              {{#compare (length @root.data.supplimentaryResponses.types.aggregations.various_locations.buckets) ">=" 1 ~}}
+              {{#compare (length @root.data.organisationSupplimentary.types.aggregations.various_locations.buckets) ">=" 1 ~}}
                 {{> term_checkbox slug="true" field="various_locations" selected=@root.request.params.query.various_locations instance_id=../instance_id value="Various locations"}}
               {{/compare ~}}
             {{/ifAny ~}}
           {{/if ~}}
         {{else}}
-          {{#each (getProperty @root.data.supplimentaryResponses.types.aggregations (concat this "_slugs.buckets")) ~}}
+          {{#each (getProperty @root.data.organisationSupplimentary.types.aggregations (concat this "_slugs.buckets")) ~}}
             {{#if key ~}}
-              {{> term_checkbox slug=key field=../this selected=(getProperty @root.request.params.query ../this) instance_id=../../instance_id value=(lookup (getProperty @root.data.supplimentaryResponses.types.aggregations (concat ../this ".buckets")) @index)}}
+              {{> term_checkbox slug=key field=../this selected=(getProperty @root.request.params.query ../this) instance_id=../../instance_id value=(lookup (getProperty @root.data.organisationSupplimentary.types.aggregations (concat ../this ".buckets")) @index)}}
             {{/if ~}}
           {{/each ~}}
         {{/compare ~}}
