--- a/sites/configurations/getinvolved/templates/opportunities/opportunity.hbs
+++ b/sites/configurations/getinvolved/templates/opportunities/opportunity.hbs
@@ -13,7 +13,7 @@
     </div>
     <div class="mdc-layout-grid equal-height">
       <div class="mdc-layout-grid__inner">
-        {{#each @root.data.supplimentaryResponses.related.hits.hits ~}}
+        {{#each @root.data.opportunitySupplimentary.related.hits.hits ~}}
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
           {{> opportunity_list _source hitContext="related-job" parentDocument=_source.Id}}
         </div>
