--- a/sites/configurations/getinvolved/templates/opportunities/search-foot.hbs
+++ b/sites/configurations/getinvolved/templates/opportunities/search-foot.hbs
@@ -2,17 +2,17 @@
 <script>
 var terms = {
   sectors: [
-    {{#each data.supplimentaryResponses.types.aggregations.sectors.buckets ~}}
+    {{#each data.opportunitySupplimentary.types.aggregations.sectors.buckets ~}}
     { field: 'sectors', term: {{{stringify key}}} },
     {{/each ~}}
   ],
   roles: [
-    {{#each data.supplimentaryResponses.types.aggregations.roles.buckets ~}}
+    {{#each data.opportunitySupplimentary.types.aggregations.roles.buckets ~}}
     { field: 'roles', term: {{{stringify key}}} },
     {{/each ~}}
   ],
   role_status: [
-    {{#each data.supplimentaryResponses.types.aggregations.role_status.buckets ~}}
+    {{#each data.opportunitySupplimentary.types.aggregations.role_status.buckets ~}}
     { field: 'role_status', term: {{{stringify key}}} },
     {{/each ~}}
   ]
