--- a/sites/configurations/getinvolved/partials/browse.hbs
+++ b/sites/configurations/getinvolved/partials/browse.hbs
@@ -5,21 +5,11 @@
         Client Groups
       </div>
       <ul class="mdc-list">
-<<<<<<< HEAD
-        {{#each @root.data.opportunitySupplimentary.types.aggregations.client_groups_slugs.buckets ~}}
-=======
-        {{#each @root.data.supplimentaryResponses.types.aggregations.client_groups.buckets ~}}
->>>>>>> 0248b0f6d6e502bf73720c0af3be3680de268ced
+        {{#each @root.data.opportunitySupplimentary.types.aggregations.client_groups.buckets ~}}
           {{#if key ~}}
             <a class="mdc-list-item" href="/search?client_groups%5B%5D={{urlencode (slugify (replace key "/" "-"))}}" role="menuitem" onclick="gtag('event', 'navigation', { event_category: '{{default ../eventContext "category-browser"}}', event_label: 'Client group: {{slugify (replace key "/" "-")}}' })">
               <span class="mdc-list-item__text">
-<<<<<<< HEAD
-                {{#with (lookup @root.data.opportunitySupplimentary.types.aggregations.client_groups.buckets @index) ~}}
-                  {{{key}}}
-                {{/with ~}}
-=======
                 {{{key}}}
->>>>>>> 0248b0f6d6e502bf73720c0af3be3680de268ced
               </span>
               <span class="mdc-list-item__meta" aria-label="{{doc_count}} opportunities">
                 {{doc_count}}
