--- a/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
@@ -195,7 +195,7 @@
               <span class="far fa-search-plus mdc-list-item__graphic" aria-hidden="true"></span>
               Save/email this search
             </button>
-            <button class="mdc-button mdc-button--raised mdc-button--large filter-search hide-lg" id="filter-search-button" onclick="document.getElementById('sidebar-button').click();">
+            <button class="mdc-button mdc-button--raised mdc-button--large filter-search hide-lg filter-search-button" id="filter-search-button">
               <span class="far fa-search mdc-list-item__graphic" aria-hidden="true"></span>
               Search filters
             </button>
@@ -206,7 +206,7 @@
           <span class="far fa-sign-in-alt mdc-list-item__graphic" aria-hidden="true"></span>
           Sign up to create email alerts
         </a>
-        <button class="mdc-button mdc-button--raised mdc-button--large filter-search hide-lg" id="filter-search-button" data-drawer-target="#sidebar-temporary">
+        <button class="mdc-button mdc-button--raised mdc-button--large filter-search hide-lg filter-search-button" id="filter-search-button" data-drawer-target="#sidebar-temporary">
           <span class="far fa-search mdc-list-item__graphic" aria-hidden="true"></span>
           Search filters
         </button>
