I Love Charity Home page campaign

--- a/sites/configurations/scvo/templates/pages/page-home.hbs
+++ b/sites/configurations/scvo/templates/pages/page-home.hbs
@@ -40,22 +40,22 @@
           <h3>Trending topics</h3>
           <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
-              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                 <a href="/projects-campaigns/datawareness">GDPR</a>
               </div>
-              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                 <a href="/digital">Digital</a>
               </div>
-              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                 <a href="/running-your-organisation/business-planning/writing-business-plan">Writing a business plan</a>
               </div>
-              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                 <a href="/jobs/community-jobs-scotland/information-for-employers/become-an-employer">Become a CJS employer</a>
               </div>
-              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                 <a href="/funding">Funding</a>
               </div>
-              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                 <a href="/running-your-organisation/governance/roles-responsibilities">Governance roles & responsibilites</a>
               </div>
             </div>
@@ -99,15 +99,15 @@
     <div class="container-fluid">
       <div class="featured scvo-cms scvo-cms-page scvo-cms-page-20536 mdc-layout-grid">
         <div class="mdc-layout-grid__inner" style="position: relative;">
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone" style="text-align: center;">
-            <a href="/projects-campaigns/i-love-charity">
-              <img class="header-image" src="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/02/i-love-charity-lp-banner.png" style="max-width: 100%; height: auto;">
-            </a>
-          </div>
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-            <div class="mdc-card v-margin-full">
+            <div class="mdc-card">
+              <section class="mdc-card__media h-padding-full">
+                <a href="/projects-campaigns/i-love-charity">
+                  <img class="header-image" src="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/02/i-love-charity-lp-banner.png" style="max-width: 100%; height: auto;">
+                </a>
+              </section>
               <section class="mdc-card__supporting-text" style="color: black !important;">
-                The <strong>‘I Love Charity’ campaign</strong> aims to inspire trust in charities by supporting good governance within organisations to ensure they are well run, open and transparent, and to encourage charities to work harder at promoting the positive impact of their work.
+                As part of our <strong>I Love Charity</strong> campaign we want to raise awareness and access to resources about what the modern charity sector does.
               </section>
               <section class="mdc-card__actions">
                 <ul>
@@ -115,6 +115,9 @@
                 </ul>
               </section>
             </div>
+          </div>
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+            <iframe width="100%" height="307" src="https://www.youtube-nocookie.com/embed/IK0wVIwfejM?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen class="mdc-elevation--z3"></iframe>
           </div>
         </div>
       </div>
