--- a/sites/configurations/goodmoves/partials/tfn-latest.hbs
+++ b/sites/configurations/goodmoves/partials/tfn-latest.hbs
@@ -10,7 +10,7 @@
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
             {{#with _source ~}}
             <div class="gist tfn-post {{../_type}}" style="background-image: url('{{image_feature}}');">
-              <a href="{{url}}" title="{{title}}" class="mdc-card{{#if image_feature}}{{else}} no-image{{/if}}">
+              <a href="{{url}}?utm_source=Widget&amp;utm_medium=Widget&amp;utm_campaign=Widget-Traffic" title="{{title}}" class="mdc-card{{#if image_feature}}{{else}} no-image{{/if}}">
                 <h3 class="mdc-card__title mdc-typography--headline">
                   {{{title}}}
                 </h3>
