--- a/sites/configurations/scvo/templates/pages/page-home.hbs
+++ b/sites/configurations/scvo/templates/pages/page-home.hbs
@@ -124,32 +124,41 @@
     </div>
   </div>
 
-  <!-- <div class="featured-background-image" style="padding: 1rem 0; background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/scvo-hp-g2018-banner-gb-1400x400.jpg');">
-  <div class="container-fluid">
-  <div class="featured scvo-cms scvo-cms-page scvo-cms-page-20536 mdc-layout-grid">
-  <div class="mdc-layout-grid__inner" style="position: relative;">
-  <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone" style="text-align: center;">
-  <a href="/the-gathering">
-  <img class="header-image" src="https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/g2018-logo-WHITE-DETAIL.png" style="max-width: 100%; height: auto;">
-  </a>
+  <div class="featured-background-image" style="padding: 1rem 0; background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/headers/gathering-2019-header.jpg');">
+    <div class="container-fluid">
+      <div class="featured scvo-cms scvo-cms-page scvo-cms-page-20536 mdc-layout-grid">
+        <div class="mdc-layout-grid__inner" style="position:relative;">
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone" style="text-align:center;">
+            <a href="/the-gathering-2019">
+              <img class="header-image" src="https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/headers/gathering-2019-logo.png" style="max-width:100%;height:auto;margin:-2rem 0;">
+            </a>
+          </div>
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+            <div class="mdc-card" style="background-color: rgba(0,0,0,0.5);">
+              <section class="mdc-card__supporting-text">
+                The Gathering is the largest free third sector event in the UK, a place for all the amazing people working in the third sector to network, showcase what they do and learn from each other.
+              </section>
+              <section class="mdc-card__actions">
+                <div class="mdc-layout-grid" style="width:100%;">
+                  <div class="mdc-layout-grid__inner">
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+                      <a class="mdc-card__action mdc-button" href="/the-gathering-2019" style="width:100%;text-align:center;background-color:#4527A0;">Find out more</a>
+                    </div>
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+                      <a class="mdc-card__action mdc-button" href="/the-gathering-2019/book-a-stand" style="width:100%;text-align:center;background-color:#4527A0;">Book a stand</a>
+                    </div>
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+                      <a class="mdc-card__action mdc-button" href="/the-gathering-2019/host-an-event" style="width:100%;text-align:center;background-color:#4527A0;">Host an event</a>
+                    </div>
+                  </div>
+                </div>
+              </section>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-  <div class="mdc-card" style="background-color: rgba(0,0,0,0.5);">
-  <section class="mdc-card__supporting-text">
-  The Gathering is the largest free third sector event in the UK, a place for all the amazing people working in the third sector to network, showcase what they do and learn from each other.
-  </section>
-  <section class="mdc-card__actions">
-  <ul>
-  <li><a class="mdc-card__action mdc-button" href="/the-gathering">Find out more</a></li>
-  <li><a class="mdc-card__action mdc-button" href="https://thegathering.scot/events/">Book to attend <span class="far fa-external-link"></span></a></li>
-  </ul>
-  </section>
-  </div>
-  </div>
-  </div>
-  </div>
-  </div>
-  </div> -->
 
   <div class="container-fluid">
     <h2>
