--- a/sites/configurations/scvo/partials/header-splash-gathering-2019.hbs
+++ b/sites/configurations/scvo/partials/header-splash-gathering-2019.hbs
@@ -1,8 +1,8 @@
-<div class="splash-image splash-image-page" style="background-image: url('http://cms.scvo.org/wp-content/uploads/2018/09/gathering-2019-header-background.jpg');">
+<div class="splash-image splash-image-page" style="background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/headers/gathering-2019-header.jpg');">
   <div class="splash-overlay splash-overlay-hidden">
     <div class="container-fluid">
       <div class="mdc-layout-grid">
-        <img src="http://cms.scvo.org/wp-content/uploads/2018/09/gathering-2019-header-text.png" alt="The Gathering" class="header-text">
+        <img src="https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/headers/gathering-2019-logo.png" alt="The Gathering" class="header-text">
       </div>
     </div>
   </div>
