--- a/sites/configurations/scvo/templates/pages/page-home.hbs
+++ b/sites/configurations/scvo/templates/pages/page-home.hbs
@@ -95,7 +95,7 @@
     </div>
   </div> -->
 
-  <div class="featured-background-image i-love-charity">
+  <div class="featured-background-image i-love-charity" style="margin-bottom:1rem;">
     <div class="container-fluid">
       <div class="featured scvo-cms scvo-cms-page scvo-cms-page-20536 mdc-layout-grid">
         <div class="mdc-layout-grid__inner" style="position: relative;">
