--- a/sites/configurations/getinvolved/partials/organisation/full.hbs
+++ b/sites/configurations/getinvolved/partials/organisation/full.hbs
@@ -32,7 +32,7 @@
     {{#compare (length region_group) ">" 0 ~}}
 
       <li class="mdc-card__info--content-primary-work-type reference mdc-typography--body1">
-        <span class="fa-li"><span class="far fa-map-marker fa-fw" title="Region"></span></span>
+        <span class="fa-li"><span class="far fa-map-marker-alt fa-fw" title="Region"></span></span>
         {{region_group}}
       </li>
     {{/compare}}
