--- a/sites/configurations/getinvolved/partials/opportunity/actions.hbs
+++ b/sites/configurations/getinvolved/partials/opportunity/actions.hbs
@@ -6,8 +6,7 @@
     {{else}}
     {{#compare @root.route.name "===" "opportunity_search" ~}}
     {{#ifAll @root.request.params.query.location @root.request.params.query.lat @root.request.params.query.lng ~}}
-    {{#if home_based ~}}
-    {{else}}
+    {{#if home_based ~}}{{else}}
     {{#if distance ~}}
     <ul class="fa-ul mdc-card__action hide-sm">
       <li class="mdc-card__info--search-distance mdc-typography--body2">
@@ -27,7 +26,7 @@
     {{/if ~}}
     {{/ifAll ~}}
     {{/compare ~}}
-    <a href="/opportunity/{{slug}}{{@root.request.url.search}}" class="mdc-card__action hide-sm">Find out more about {{organisation_name}}</a>
+    <a href="/opportunity/{{slug}}{{@root.request.url.search}}" class="mdc-card__action hide-sm">Find out more</a>
     <a href="/opportunity/{{slug}}{{@root.request.url.search}}" class="mdc-card__action hide-md hide-lg"><span class="fal fa-info-circle fa-fw fa-2x" aria-hidden="true"></span></a>
     {{/compare ~}}
   </div>
