--- a/sites/configurations/getinvolved/partials/organisation-search-form.hbs
+++ b/sites/configurations/getinvolved/partials/organisation-search-form.hbs
@@ -23,8 +23,8 @@
 
   <div class="h-padding">
     {{#>components_tab_bar}}
-      {{>components_tab url=(concat "organisations/search" @root.request.url.search) iconClasses="far fa-list fa-fw" label="List" active=(compare @root.request.url.pathname "===" "organisations/search")}}
-      {{>components_tab url=(concat "organisations/map" @root.request.url.search) iconClasses="far fa-map-marker-alt fa-fw" label="Map" active=(compare @root.request.url.pathname "===" "organisations/map")}}
+      {{>components_tab url=(concat "organisations/search" @root.request.url.search) iconClasses="far fa-list fa-fw" label="List" active=(compare @root.request.url.pathname "===" "/organisations/search")}}
+      {{>components_tab url=(concat "organisations/map" @root.request.url.search) iconClasses="far fa-map-marker-alt fa-fw" label="Map" active=(compare @root.request.url.pathname "===" "/organisations/map")}}
     {{/components_tab_bar}}
   </div>
 
