--- a/sites/configurations/emailer/templates/process/email-data.hbs
+++ b/sites/configurations/emailer/templates/process/email-data.hbs
@@ -1,11 +1,9 @@
 [
 {{#if @root.data.search_data}}
   {{#eachJoin @root.data.notifications.subscriptions.[1] ","}}
-    "{{slugify (concat campaign " " email)}}",
-    {{{slugify @root.data.search_data.goodmoves-saved-searches-tonicbluegmailcom}}},
     {{#ifAny
       (getProperty @root.context.metaData.campaignConfig (concat campaign '.sendIfEmpty'))
-      (any (getProperty @root.data.search_data (slugify (concat campaign " " email)) '.hits.hits'))
+      (any (getProperty @root.data.search_data (concat (slugify (concat campaign " " email)) '.hits.hits')))
     }}
       {
         "from": {{{stringify (getProperty @root.context.metaData.campaignConfig (concat campaign '.from'))}}},
@@ -21,7 +19,7 @@
             {{~> 
               (getProperty @root.context.metaData.campaignConfig (concat campaign '.subjectPartial'))
               subscription=this
-              searchData=(getProperty @root.data.search_data (slugify (concat campaign " " email)))
+              searchData=(getProperty @root.data.search_data (concat (slugify (concat campaign " " email))))
               campaignConfig=(getProperty @root.context.metaData.campaignConfig campaign)          
             ~}}
           {{~/blockStringify}},
@@ -30,13 +28,17 @@
             {{~> 
               (getProperty @root.context.metaData.campaignConfig (concat campaign '.bodyPartial'))
               subscription=this
-              searchData=(getProperty @root.data.search_data (slugify (concat campaign " " email)))
+              searchData=(getProperty @root.data.search_data (concat (slugify (concat campaign " " email))))
               campaignConfig=(getProperty @root.context.metaData.campaignConfig campaign)          
             ~}}
           {{~/blockStringify}}
       }
-    {{else}}
-    "Nothing to send"
+      {{else}}{{!--
+      {
+        "nothing_to_send": {{{stringify (slugify (concat campaign " " email))}}},
+        "query": {{{stringify (getProperty @root.data.search_data (concat (slugify (concat campaign " " email)) '.hits.hits'))}}}
+      }
+      --}}
     {{/ifAny}}
   {{/eachJoin}}
 {{/if}}
