--- a/sites/configurations/getinvolved/partials/account/sign-in-social.hbs
+++ b/sites/configurations/getinvolved/partials/account/sign-in-social.hbs
@@ -2,10 +2,10 @@
   <button class="mdc-button mdc-ripple-surface mdc-ripple-surface--primary" id="continue-with-google" type="button">
     <span class="fab fa-google fa-2x"></span> Continue with Google
   </button>
-  <button class="mdc-button mdc-ripple-surface mdc-ripple-surface--primary" id="continue-with-twitter" type="button">
+  <button class="disabled mdc-button mdc-ripple-surface mdc-ripple-surface--primary" id="continue-with-twitter" type="button">
     <span class="fab fa-twitter fa-2x"></span> Continue with Twitter
   </button>
-  <button class="mdc-button mdc-ripple-surface mdc-ripple-surface--primary" id="continue-with-facebook" type="button">
+  <button class="disabled mdc-button mdc-ripple-surface mdc-ripple-surface--primary" id="continue-with-facebook" type="button">
     <span class="fab fa-facebook fa-2x"></span> Continue with Facebook
   </button>
 </div>
