--- a/sites/configurations/getinvolved/partials/browse.hbs
+++ b/sites/configurations/getinvolved/partials/browse.hbs
@@ -21,7 +21,7 @@
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone content page-content">
       <div class="browse-title browse-title-work_types mdc-typography--headline5">
-        Work types
+        Activities
       </div>
       <ul class="mdc-list">
         {{#each @root.data.opportunitySupplimentary.types.aggregations.work_types.buckets ~}}
