Only show organisations with current vacancies

--- a/sites/configurations/getinvolved/partials/search-info.hbs
+++ b/sites/configurations/getinvolved/partials/search-info.hbs
@@ -12,7 +12,7 @@
   {{/compare ~}}
 </div>
 {{else}}
-{{#ifAny @root.request.params.query.keywords @root.request.params.query.location @root.request.params.query.salary_min @root.request.params.query.salary_max @root.request.params.query.working_patterns @root.request.params.query.regions @root.request.params.query.roles @root.request.params.query.sectors @root.request.params.query.home_based ~}}
+{{#ifAny @root.request.params.query.keywords @root.request.params.query.location @root.request.params.query.regions @root.request.params.query.work_types @root.request.params.query.client_groups @root.request.params.query.organisation_activities @root.request.params.query.recently_updated @root.request.params.query.has_opportunities ~}}
 <div class="search-info mdc-elevation--z1">
   No results could be found, please try a different search query
 </div>
