--- a/sites/configurations/getinvolved/partials/organisation-search-form.hbs
+++ b/sites/configurations/getinvolved/partials/organisation-search-form.hbs
@@ -129,6 +129,10 @@
       </div>
     {{/each ~}}
 
+    <div class="v-margin-full">
+      {{> term_checkbox slug="true" field="has_opportunities" selected=@root.request.params.query.has_opportunities instance_id=instance_id value="Only show organisations with current opportunities"}}
+    </div>
+
     <div class="h-margin v-margin mdc-drawer--occasional-ie11">
       <button class="mdc-button mdc-button--raised mdc-button--large mdc-button--fullwidth mdc-ripple-surface mdc-ripple-surface--primary" type="submit" id="{{instance_id}}-search-submit" data-mdc-auto-init="MDCRipple">
         <span class="far fa-search fa-fw mdc-list-item__graphic" aria-hidden="true"></span>
